--- a/valuetransfer/src/main/res/layout/fragment_wallet_identities.xml
+++ b/valuetransfer/src/main/res/layout/fragment_wallet_identities.xml
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="My Identities"
+            android:text="My Identity"
             android:textColor="@color/colorPrimaryValueTransfer"
             android:textSize="16sp"
             android:textStyle="italic|bold"
@@ -55,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/clHeader"
-        tools:itemCount="2"
+        tools:itemCount="1"
         tools:listitem="@layout/item_identity" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
