--- a/valuetransfer/src/main/res/navigation/nav_graph_valuetransfer.xml
+++ b/valuetransfer/src/main/res/navigation/nav_graph_valuetransfer.xml
@@ -21,7 +21,7 @@
     <fragment
         android:id="@+id/identityFragment"
         android:name="nl.tudelft.trustchain.valuetransfer.ui.IdentityFragment"
-        android:label="Identities"
+        android:label="Identity"
         tools:layout="@layout/fragment_identity" />
 
     <fragment
