--- a/valuetransfer/src/main/res/menu/identity_options.xml
+++ b/valuetransfer/src/main/res/menu/identity_options.xml
@@ -3,14 +3,14 @@
     <item
         android:id="@+id/actionAddPersonalIdentity"
         android:icon="@drawable/ic_device_hub_black_24dp"
-        android:title="Add" />
+        android:title="Add Identity" />
     <item
         android:id="@+id/actionEditPersonalIdentity"
         android:icon="@drawable/ic_device_hub_black_24dp"
-        android:title="Edit" />
+        android:title="Edit Identity" />
     <item
         android:id="@+id/actionRemovePersonalIdentity"
         android:icon="@drawable/ic_device_hub_black_24dp"
-        android:title="Remove" />
+        android:title="Remove Identity" />
 
 </menu>
