--- a/valuetransfer/src/main/res/menu/valuetransfer_navigation_menu.xml
+++ b/valuetransfer/src/main/res/menu/valuetransfer_navigation_menu.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/identityFragment"
         android:icon="@drawable/ic_identity"
-        android:title="Identities" />
+        android:title="Identity" />
 
     <item
         android:id="@+id/socialFragment"
