--- a/valuetransfer/src/main/res/layout/dialog_qrcode.xml
+++ b/valuetransfer/src/main/res/layout/dialog_qrcode.xml
@@ -7,12 +7,15 @@
 
     <TextView
         android:id="@+id/tvTitle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         tools:text="Dialog Title"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        android:textColor="@color/white"
         android:textStyle="bold"
-        android:textSize="16dp"
+        android:textAllCaps="true"
         android:layout_marginTop="12dp"
         android:paddingHorizontal="12dp"
         android:padding="8dp"
@@ -24,9 +27,10 @@
         android:id="@+id/tvSubTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:textAlignment="center"
         tools:text="Dialog subtitle"
         android:textSize="14dp"
+        android:textColor="@color/white"
         android:paddingHorizontal="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,42 +41,25 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="H,1:1"
-        android:padding="0dp"
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginVertical="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvSubTitle" />
 
     <ProgressBar
         android:id="@+id/pbLoadingSpinner"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:maxHeight="50dp"
         android:maxWidth="50dp"
         app:layout_constraintDimensionRatio="H,1:1"
         android:layout_gravity="center"
-        android:indeterminateTint="@color/colorPrimaryValueTransfer"
+        android:indeterminateTint="@color/white"
         android:indeterminateTintMode="src_atop"
         app:layout_constraintBottom_toBottomOf="@+id/ivQRCode"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/ivQRCode" />
-
-    <Button
-        android:id="@+id/btnCloseDialog"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:background="@drawable/button_rounded"
-        android:backgroundTint="@color/colorPrimaryValueTransfer"
-        android:paddingVertical="4dp"
-        android:text="Close"
-        android:textColor="@color/white"
-        android:textSize="12sp"
-        android:layout_marginBottom="12dp"
-        android:visibility="invisible"
-        tools:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivQRCode" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
