--- a/peerchat/src/main/res/layout/item_message.xml
+++ b/peerchat/src/main/res/layout/item_message.xml
@@ -78,6 +78,34 @@
                 android:id="@+id/image"
                 android:layout_width="200dp"
                 android:layout_height="200dp" />
+
+            <LinearLayout
+                android:id="@+id/contactLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="12dp"
+                android:background="@drawable/bg_message"
+                android:visibility="gone">
+
+                <ImageView
+                    android:id="@+id/contactIcon"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/ic_baseline_person_24" />
+
+                <TextView
+                    android:id="@+id/contactName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textColor="@color/text_primary"/>
+
+            </LinearLayout>
         </FrameLayout>
     </FrameLayout>
 
