--- a/valuetransfer/src/main/res/values/colors.xml
+++ b/valuetransfer/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#0D47A1</color>
+    <color name="colorPrimaryDark">@color/colorPrimaryDarkValueTransfer</color>
     <color name="colorAccent">#D81B60</color>
 
     <color name="colorGreen">@color/colorPrimaryValueTransfer</color>
+    <color name="colorYellow">#FFC145</color>
 
     <color name="text_primary">#000000</color>
     <color name="text_secondary">#666666</color>
