--- a/valuetransfer/src/main/res/layout/dialog_identity_add.xml
+++ b/valuetransfer/src/main/res/layout/dialog_identity_add.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingHorizontal="12dp"
     android:paddingTop="12dp"
-    android:backgroundTint="@color/colorPrimaryValueTransfer">
+    android:paddingBottom="12dp"
+    android:backgroundTint="@color/colorPrimaryValueTransfer"
+    tools:background="@color/colorPrimaryValueTransfer">
 
     <TextView
         android:id="@+id/tvTitle"
@@ -14,6 +17,7 @@
         android:text="Personal Identity Details"
         android:textSize="20sp"
         android:textAlignment="center"
+        android:gravity="center_horizontal"
         android:textColor="@color/white"
         android:textAllCaps="true"
         android:textStyle="bold"
