--- a/valuetransfer/src/main/res/layout/fragment_wallet_identities.xml
+++ b/valuetransfer/src/main/res/layout/fragment_wallet_identities.xml
@@ -1,70 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:background="@color/colorPrimaryValueTransfer">
 
     <TextView
         android:id="@+id/tvIdentityTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My Identity"
-        android:textStyle="bold"
-        android:textColor="@color/black"
+        android:text="Identity"
+        android:textColor="@color/white"
         android:textSize="32sp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="28dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/tvNoPersonalIdentity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingHorizontal="12dp"
+        android:paddingVertical="16dp"
+        android:layout_margin="12dp"
+        android:backgroundTint="@color/white"
+        android:background="@drawable/pill_rounded"
+        android:text="CLICK TO ADD PERSONAL IDENTITY DETAILS"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimaryValueTransfer"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvIdentityTitle" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvIdentities"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/tvIdentityTitle"
-        tools:itemCount="1"
-        tools:listitem="@layout/item_identity_new" />
-
-    <TextView
-        android:id="@+id/tvChatsSocialTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="My Chats"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:textSize="32sp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvIdentities"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvChats"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/tvChatsSocialTitle"
-        tools:itemCount="1"
-        tools:listitem="@layout/item_identity_new" />
-
-    <TextView
-        android:id="@+id/tvExchangeTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Exchange"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:textSize="32sp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvChats"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvExchange"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/tvExchangeTitle"
+        android:paddingVertical="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvNoPersonalIdentity"
         tools:itemCount="1"
         tools:listitem="@layout/item_identity_new" />
 
