--- a/valuetransfer/src/main/res/layout/item_identity_detail_new.xml
+++ b/valuetransfer/src/main/res/layout/item_identity_detail_new.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/square_rounded_dark"
-        android:padding="20dp"
+        android:padding="16dp"
+        elevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
